[tool.poetry]
name = "data_store"
version = "0.1.0"
description = "A django backend that gathers all services and models provided bybyy Bolius"
authors = ["Benjamin Rotendahl <Benjamin@Rotendahl.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.0.7"
environs = "8.0.0"
gunicorn = "20.0.4"
matplotlib = "3.2.1"
coverage = "5.1"
dj-database-url = "0.5.0"
dj-email-url = "1.0.1"
django-cors-headers = "3.4.0"
graphene = "2.1.8"
graphene-django = "2.10.1"
numpy = "1.18.5"
pandas = "1.0.4"
pillow = "7.2.0"
psycopg2 = "2.8.5"
geojson = "2.5.0"
pyproj = "2.6.0"
requests = "2.24.0"
tqdm = "4.46.1"
raven = "6.10.0"
django_plotly_dash = "1.3.1"
utm = "0.5.0"
black = "19.10b0"
flake8 = "3.8.3"
pydotplus = "2.0.2"
django-extensions = "2.2.9"
isort = {extras = ["pyproject"], version= "4.3.21"}
selenium = "3.141.0"
bpython = "^0.19"
whitenoise = "^5.1.0"


[tool.black]
line-length = 88
target-version = ['py37', 'py38']
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
