[tool.poetry]
name = "data_store"
version = "0.1.0"
description = "A django backend that gathers all services and models provided bybyy Bolius"
authors = ["Benjamin Rotendahl <Benjamin@Rotendahl.dk>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "3.1"
environs = "8.0.0"
gunicorn = "20.0.4"
matplotlib = "3.3"
coverage = "5.2.1"
dj-database-url = "0.5.0"
dj-email-url = "1.0.1"
django-cors-headers = "3.4.0"
graphene = "2.1.8"
graphene-django = "2.12.1"
numpy = "1.19.1"
pandas = "1.1.0"
pillow = "7.2"
psycopg2 = "2.8.5"
geojson = "2.5.0"
pyproj = "2.6.0"
requests = "2.24.0"
tqdm = "4.48.2"
raven = "6.10.0"
django_plotly_dash = "1.4.2"
utm = "0.6.0"
black = "19.10b0"
flake8 = "3.8.3"
pydotplus = "2.0.2"
django-extensions = "3.0.5"
isort = "5.3.2"
selenium = "3.141.0"
bpython = "0.19"
whitenoise = "5.1.0"
redis = "3.5.3"


[tool.black]
line-length = 88
target-version = ['py37', 'py38']


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
