[tool.poetry]
name = "data_store"
version = "0.1.0"
description = "A django backend that gathers all services and models provided bybyy Bolius"
authors = ["Benjamin Rotendahl <Benjamin@Rotendahl.dk>"]

[tool.poetry.dependencies]
black = "20.8b1"
bpython = "0.19"
coverage = "5.2.1"
dj-database-url = "0.5.0"
dj-email-url = "1.0.1"
django = "3.1.1"
django_plotly_dash = "1.4.2"
django-cors-headers = "3.5.0"
django-extensions = "3.0.9"
environs = "8.0.0"
flake8 = "3.8.3"
geojson = "2.5.0"
graphene = "2.1.8"
graphene-django = "2.13.0"
gunicorn = "20.0.4"
isort = "5.6.4"
matplotlib = "3.3.1"
numpy = "1.19.4"
pandas = "1.1.4"
pillow = "9.0.0"
psycopg2 = "2.8.6"
pydotplus = "2.0.2"
pyproj = "2.6.0"
python = "^3.8"
raven = "6.10.0"
redis = "3.5.3"
requests = "2.24.0"
selenium = "3.141.0"
tqdm = "4.51.0"
utm = "0.6.0"
whitenoise = "5.2.0"
scikit-learn = "^0.23.2"


[tool.black]
line-length = 88
target-version = ['py37', 'py38']


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
